# pineapplewriter

./: .gitignore  CMakeLists.txt  CMakeLists_test.txt  GLOBAL_HOTKEYS.md  INSTALL.md  OPENAITRANSCRIBERPOST_README.md  README.md  TRANSCRIPTION_README.md  build-debug.sh  build.sh  release_flatpak.sh  test.pcm  test_keycodes.cpp  test_volume.cpp
data/: com.petesimard.pineapplewriter.desktop  com.petesimard.pineapplewriter.metainfo.xml  com.petesimard.pineapplewriter.yaml  io.github.petesimard.pineapplewriter.desktop  io.github.petesimard.pineapplewriter.metainfo.xml
resources/: resources.qrc
src/: audiobuffer.cpp  audiobuffer.h  audiorecorder.cpp  audiorecorder.h  circularbufferdevice.cpp  circularbufferdevice.h  fixedbufferdevice.cpp  fixedbufferdevice.h  globalhotkeymanager.cpp  globalhotkeymanager.h  hotkeywidget.cpp  hotkeywidget.h  keyboardsimulator.cpp  keyboardsimulator.h  main.cpp  mainwindow.cpp  mainwindow.h  openaitranscriber.cpp  openaitranscriber.h  openaitranscriber_post.cpp  openaitranscriber_post.h  openaitranscriber_realtime.cpp  openaitranscriber_realtime.h  postprocess.cpp  postprocess.h  pushtotalk.cpp  pushtotalk.h
